scss divide view
main_chat.scssとside_chat.scssを作成
サイドバーとチャット画面でビューを2つに分割

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,3 +2,5 @@
 @import "modules/messages";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "side_bar.scss";
+@import "main_chat.scss";
