--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -1,6 +1,18 @@
 .side-bar {
-  height: 675px;
+  height: 100vh;
   width: 300px;
   background-color: #253141;
   float: left;
 }
+
+  .side-bar__user-name {
+    height: 100px;
+    width: 300px;
+    background-color: #253141;
+  }
+
+  .side-bar__group-list {
+    height: 100vh;
+    width: 300px;
+    background-color: #2f3e51;
+  }
