scss main_chat divide
メインチャットを3つに分割
.chat-main__group-info、.chat-main__message-list、.chat-main__message-form

--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -1,6 +1,24 @@
 .chat-main {
   height: 100vh;
   width: calc(100% - 300px);
-  background-color: #eeeeee;
+  background-color: #ffffff;
   float: right;
+}
+
+  .chat-main__group-info {
+    height: 100px;
+    width: calc(100vw - 300px);
+    background-color: #ffffff;
+  }
+
+  .chat-main__message-list {
+    height: calc(100vh - 190px);
+    width: calc(100vw - 300px);
+    background-color: #fafafa;
+  }
+
+  .chat-main__message-form {
+    height: 90px;
+    width: calc(100vw - 300px);
+    background-color: #d2d2d2;
   }
