--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -12,7 +12,7 @@
   }
 
   .side-bar__group-list {
-    height: 100vh;
+    height: calc(100vh - 100px);
     width: 300px;
     background-color: #2f3e51;
   }
