--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,4 +1,8 @@
 .side-bar
   .side-bar__user-name
     .top-items
+      .top-items__name
+        name
+      .top-items__icons
+        item
   .side-bar__group-list
