scss icon setting
アイコンを上下中央に配置
アイコンがリンクになるよう設定

--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -27,6 +27,8 @@
       }
 
       .top-items__icons {
+        // text-align-last: right;
+        line-height: 20px;
         width: 60px;         background-color: #b4b4b4;
         justify-content: space-between;
       }
