--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -15,10 +15,11 @@
     .top-items {
       height: 20px;
       width: 260px;
-      background-color: #d8d8d8;
       margin: auto; 
       justify-content: space-between;
       display: flex;
+      color: #ffffff;
+      font-weight: bold;
     }
 
       .top-items__name {
@@ -29,7 +30,7 @@
       .top-items__icons {
         text-align-last: right;
         line-height: 20px;
-        width: 60px;         background-color: #b4b4b4;
+        width: 60px;
         justify-content: space-between;
       }
 
