scss group-list position setting
グループ一覧の表示

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -11,3 +11,8 @@
           = icon('fa', 'cog')
           %span<>
   .side-bar__group-list
+    .bottom-groups
+      .bottom-groups__name
+        techcamp
+      .bottom-groups__message
+        まだメッセージがありません
