--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -20,6 +20,7 @@
       display: flex;
       color: #ffffff;
       font-weight: bold;
+      font-size: 16px;
     }
 
       .top-items__name {
@@ -50,3 +51,25 @@
     width: 300px;
     background-color: #2f3e51;
   }
+
+    .bottom-groups {
+      height: 91px;
+      width: 300px;
+      color: #ffffff;
+    }
+
+      .bottom-groups__name {
+        height: 15px;
+        width: 260px;
+        margin: 0 auto;
+        padding-top: 20px;
+        font-size: 15px; 
+      }
+
+      .bottom-groups__message {
+        height: 11px;
+        width: 260px;
+        margin: 0 auto;
+        padding-top: 25px;
+        font-size: 11px;
+      }
