--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -9,7 +9,40 @@
     height: 100px;
     width: calc(100vw - 300px);
     background-color: #ffffff;
+    display: flex;
   }
+
+    .chat-main__group-info__left {
+      width: 100%;
+    }
+
+      .chat-main__group-info__left__name {
+        font-size: 20px;
+        padding: 35px 0px 15px 40px;
+      }
+
+      .chat-main__group-info__left__member {
+        color: #999999;
+        font-size: 12px;
+        padding-left: 40px;
+      }
+
+    .chat-main__group-info__icon {
+      justify-content: flex-end;
+      height: 40px;
+      width: 72px;
+      color: #38aef0;
+      margin: 30px 40px 0px 40px;
+      padding: 0px 20px;
+      font-size: 16px;
+      line-height: 40px;
+      border: 1px solid;
+    }
+
+      .chat-main__group-info__icon__edit {
+        text-decoration:none;
+        color: #38aef0;
+      }
 
   .chat-main__message-list {
     height: calc(100vh - 190px);
