--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -48,7 +48,30 @@
     height: calc(100vh - 190px);
     width: calc(100vw - 300px);
     background-color: #fafafa;
+    padding: 35px 0px 0px 40px;
   }
+    .chat-main__message-list__box {
+      display: flex;
+      margin-bottom: 12px;
+    }
+
+      .chat-main__message-list__box__title {
+        font-size: 16px;
+        color: #333333;
+        font-weight: bold;
+      }
+
+      .chat-main__message-list__box__title__time {
+        font-size: 12px;
+        color: #999999;
+        margin-left: 12px;
+      }
+
+    .chat-main__message-list__box__message {
+      font-size: 14px;
+      color: #434A54;
+      padding-bottom: 46px;
+    }
 
   .chat-main__message-form {
     height: 90px;
