--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -9,4 +9,11 @@
       = link_to root_path, class: "chat-main__group-info__icon__edit" do
         Edit
   .chat-main__message-list
+    .chat-main__message-list__box
+      .chat-main__message-list__box__title
+        test
+      .chat-main__message-list__box__title__time
+        2020/05/23
+    .chat-main__message-list__box__message
+      Hello
   .chat-main__message-form
