--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -77,4 +77,36 @@
     height: 90px;
     width: calc(100vw - 300px);
     background-color: #d2d2d2;
+    padding: 20px 40px;
   }
+
+    .chat-main__message-form__box {
+      display: flex;
+    }
+
+      .chat-main__message-form__box__text {
+        height: 50px;
+        width: calc(100% - 115px);
+        background-color: #ffffff;
+        line-height: 50px;
+        padding-left: 10px;
+        display: flex;
+      }
+
+      .chat-main__message-form__box__image {
+        
+      }
+
+    .chat-main__message-form__send {
+      height: 50px;
+      width: 100px;
+      background-color: #38aef0;;
+      text-align: center;
+      line-height: 50px;
+      margin-left: 15px;
+    }
+
+      .send__btn {
+        text-decoration:none;
+        color: #ffffff;
+      }
