--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -8,6 +8,7 @@
     .chat-main__group-info__icon
       = link_to root_path, class: "chat-main__group-info__icon__edit" do
         Edit
+
   .chat-main__message-list
     .chat-main__message-list__box
       .chat-main__message-list__box__title
@@ -16,14 +17,15 @@
         2020/05/23
     .chat-main__message-list__box__message
       Hello
-  .chat-main__message-form
-    .chat-main__message-form__box
-      .chat-main__message-form__box__text
+
+  .message-form
+    .message-form__box
+      .message-form__box__text
         type a message
-      .chat-main__message-form__box__image
+      .message-form__box__image
         -# %label{class: "input-box__image"}
         -#   = icon('far', 'image')
         -#   %input{type: "file"}
-        .chat-main__message-form__send
+        .message-form__send
           = link_to root_path, class: "send__btn"do
             = "Send"
