Adding textbox, submit
textbox, submitボタン追加

--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -75,7 +75,7 @@
     }
 
 
-  .message-form {
+  .form {
     height: 90px;
     width: calc(100vw - 300px);
     background-color: #d2d2d2;
@@ -107,8 +107,8 @@
       margin-left: 15px;
     }
 
-      .send__btn {
-        text-decoration:none;
-        color: #ffffff;
+      .submit-btn {
+        // text-decoration:none;
+        // color: #ffffff;
       }
   }
