--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -18,14 +18,13 @@
     .chat-main__message-list__box__message
       Hello
 
-  .message-form
-    .message-form__box
-      .message-form__box__text
-        type a message
-      .message-form__box__image
+  .form
+    .form__box
+      .form__box__text
+        %input{type: "text", class: "chat-main__message-form__box__text", placeholder: "type a message"}
+      .form__box__image
         -# %label{class: "input-box__image"}
         -#   = icon('far', 'image')
         -#   %input{type: "file"}
-        .message-form__send
-          = link_to root_path, class: "send__btn"do
-            = "Send"
+        .form__send
+          %input{type: "submit", class: "submit-btn"}
