--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -81,11 +81,7 @@
     background-color: #d2d2d2;
     padding: 20px 40px;
 
-    &__box {
-      display: flex;
-    }
-
-      &__box__text {
+      &_text {
         height: 50px;
         width: calc(100% - 115px);
         background-color: #ffffff;
@@ -94,7 +90,7 @@
         display: flex;
       }
 
-      &__box__image {
+      &__image {
         
       }
 
