--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -19,12 +19,11 @@
       Hello
 
   .form
-    .form__box
-      .form__box__text
-        %input{type: "text", class: "chat-main__message-form__box__text", placeholder: "type a message"}
-      .form__box__image
-        -# %label{class: "input-box__image"}
-        -#   = icon('far', 'image')
-        -#   %input{type: "file"}
-        .form__send
-          %input{type: "submit", class: "submit-btn"}
+    .form__text
+      %input{type: "text", class: "chat-main__message-form__box__text", placeholder: "type a message"}
+    .form__image
+      -# %label{class: "input-box__image"}
+      -#   = icon('far', 'image')
+      -#   %input{type: "file"}
+  .form__send
+    %input{type: "submit", class: "submit-btn"}
