--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -19,11 +19,11 @@
       Hello
 
   .form
-    .form__text
-      %input{type: "text", class: "chat-main__message-form__box__text", placeholder: "type a message"}
-    .form__image
-      -# %label{class: "input-box__image"}
-      -#   = icon('far', 'image')
-      -#   %input{type: "file"}
-  .form__send
-    %input{type: "submit", class: "submit-btn"}
+    %form.new_message
+      .input-box
+        %input{type: "text", class: "input-box__text", placeholder: "type a message"}
+      
+        %label{class: "input-box__image"}
+          = icon('far', 'image')
+          %input{type: "file", class: "input-box__image__file"}
+      %input{type: "submit", class: "submit-btn"}
