scss submit, image ajustment
参考：投稿フォームを実装しようhttps://master.tech-camp.in/curriculums/3943#7
ボタン横並び、画像 display: none;

--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -82,7 +82,7 @@
     padding: 20px 40px;
 
     form {
-      
+      display: flex;
       .input-box {
           
         &__text {
@@ -93,8 +93,10 @@
           padding-left: 10px;
           display: flex;
         }
-
         &__image {
+          &__file {
+            display: none;
+          }
         }
       }
 
