--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -77,38 +77,37 @@
 
   .form {
     height: 90px;
-    width: calc(100vw - 300px);
     background-color: #d2d2d2;
     padding: 20px 40px;
 
     form {
       display: flex;
       .input-box {
-          
+        width: 100%;
+
         &__text {
           height: 50px;
-          width: calc(100% - 115px);
-          background-color: #ffffff;
-          line-height: 50px;
+          width: 100%;
           padding-left: 10px;
-          display: flex;
         }
         &__image {
+          cursor: pointer;
+          font-size: 1.3rem;
+
           &__file {
             display: none;
           }
         }
       }
 
-
       .submit-btn {
         height: 50px;
         width: 100px;
+        padding: 0 30px;
+        margin-left: 15px;
         background-color: #38aef0;
         color: #ffffff;
-        text-align: center;
-        line-height: 50px;
-        margin-left: 15px;
+        cursor: pointer;
       }
     }
   }
