--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -83,14 +83,20 @@
     form {
       display: flex;
       .input-box {
+        display: flex;
         width: 100%;
+        position: relative;
 
         &__text {
           height: 50px;
           width: 100%;
-          padding-left: 10px;
+          padding: 0 40px 0 10px;
         }
         &__image {
+          position: absolute;
+          top: 10px;
+          right: 10px;
+
           cursor: pointer;
           font-size: 1.3rem;
 
