--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -18,7 +18,7 @@
       margin: auto; 
       justify-content: space-between;
       display: flex;
-      color: #ffffff;
+      color: white;
       font-weight: bold;
       font-size: 16px;
     }
@@ -37,12 +37,12 @@
 
         .edit__btn {
           text-decoration:none;
-          color: #ffffff;
+          color: white;
         }
 
         .cog__btn {
           text-decoration:none;
-          color: #ffffff;
+          color: white;
           margin-left: 5px;
         }
 
@@ -55,7 +55,7 @@
     .bottom-groups {
       height: 91px;
       width: 300px;
-      color: #ffffff;
+      color: white;
     }
 
       .bottom-groups__name {
