--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -1,14 +1,14 @@
 .chat-main {
   height: 100vh;
   width: calc(100% - 300px);
-  background-color: #ffffff;
+  background-color: white;
   float: right;
 }
 
   .chat-main__group-info {
     height: 100px;
     width: calc(100vw - 300px);
-    background-color: #ffffff;
+    background-color: white;
     display: flex;
   }
 
@@ -86,7 +86,6 @@
         display: flex;
         width: 100%;
         position: relative;
-
         &__text {
           height: 50px;
           width: 100%;
@@ -96,10 +95,8 @@
           position: absolute;
           top: 10px;
           right: 10px;
-
           cursor: pointer;
           font-size: 1.3rem;
-
           &__file {
             display: none;
           }
@@ -112,7 +109,7 @@
         padding: 0 30px;
         margin-left: 15px;
         background-color: #38aef0;
-        color: #ffffff;
+        color: white;
         cursor: pointer;
       }
     }
