--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -25,4 +25,4 @@
         %label{class: "input-box__image"}
           = icon('far', 'image')
           %input{type: "file", class: "input-box__image__file"}
-      %input{type: "submit", class: "submit-btn"}
+      %input{type: "submit", class: "submit-btn", value: "Send"}
