side-bar__user-name リファクタリング
side-bar
user-name をHaml式にリファクタリング

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,9 +1,9 @@
 .side-bar
   .side-bar__user-name
-    .top-items
-      .top-items__name
+    .side-bar__user-name__top-items
+      .side-bar__user-name__top-items__name
         name
-      .top-items__icons
+      .side-bar__user-name__top-items__icons
         = link_to root_path, class: "edit__btn" do
           = icon('fa', 'edit')
           %span<>
