--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -3,16 +3,12 @@
   width: 300px;
   background-color: #253141;
   float: left;
-}
-
-  .side-bar__user-name {
+  &__user-name {
     height: 100px;
     width: 300px;
     background-color: #253141;
     display: flex;
-  }
-
-    .top-items {
+    &__top-items {
       height: 20px;
       width: 260px;
       margin: auto; 
@@ -21,25 +17,23 @@
       color: white;
       font-weight: bold;
       font-size: 16px;
-    }
-
-      .top-items__name {
+      &__name {
         text-align: center;
         line-height: 20px;
       }
-
-      .top-items__icons {
+      &__icons {
         text-align-last: right;
         line-height: 20px;
         width: 60px;
         justify-content: space-between;
       }
-
+    }
+  }
+}
         .edit__btn {
           text-decoration:none;
           color: white;
         }
-
         .cog__btn {
           text-decoration:none;
           color: white;
