--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -11,8 +11,8 @@
           = icon('fa', 'cog')
           %span<>
   .side-bar__group-list
-    .bottom-groups
-      .bottom-groups__name
+    .side-bar__group-list__bottom-groups
+      .side-bar__group-list__bottom-groups__name
         techcamp
-      .bottom-groups__message
+      .side-bar__group-list__bottom-groups__message
         まだメッセージがありません
