--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -5,19 +5,19 @@
   float: right;
   &__group-info {
     height: 100px;
-    width: calc(100vw - 300px);
     background-color: white;
+    padding: 0 40px;
     display: flex;
+    border-bottom: solid 1px #eee;
     &__left {
       width: 100%;
       &__name {
         font-size: 20px;
-        padding: 35px 0px 15px 40px;
+        padding: 35px 0px 15px;
       }
       &__member {
         color: #999999;
         font-size: 12px;
-        padding-left: 40px;
       }
     }
     &__icon {
@@ -25,7 +25,7 @@
       height: 40px;
       width: 72px;
       color: #38aef0;
-      margin: 30px 40px 0px 40px;
+      margin: 30px 0px 40px;
       padding: 0px 20px;
       font-size: 16px;
       line-height: 40px;
