--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -9,13 +9,13 @@
       = link_to root_path, class: "chat-main__group-info__icon__edit" do
         Edit
 
-  .chat-main__message-list
-    .chat-main__message-list__box
-      .chat-main__message-list__box__title
+  .chat-main__messages
+    .chat-main__messages__box
+      .chat-main__messages__box__title
         test
-      .chat-main__message-list__box__time
+      .chat-main__messages__box__time
         2020/05/23
-    .chat-main__message-list__message
+    .chat-main__messages__message
       Hello
 
   .form
