--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -6,14 +6,14 @@
       .chat-main__group-info__left__member
         Member：testさん
     .chat-main__group-info__icon
-      = link_to root_path, class: "chat-main__group-info__icon__edit" do
+      = link_to "#", class: "chat-main__group-info__icon__edit" do
         Edit
 
   .chat-main__messages
-    .chat-main__messages__box
-      .chat-main__messages__box__title
+    .chat-main__messages__up
+      .chat-main__messages__up__title
         test
-      .chat-main__messages__box__time
+      .chat-main__messages__up__time
         2020/05/23
     .chat-main__messages__message
       Hello
