--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -1,3 +1,7 @@
+.side-bar__group-list::-webkit-scrollbar {
+  display: none;
+}
+
 .side-bar {
   width: 300px;
   background-color: #253141;
@@ -40,6 +44,7 @@
     height: calc(100vh - 100px);
     background-color: #2f3e51;
     padding: 20px 20px 0px;
+    overflow: scroll;
     &__bottom-groups {
       margin-bottom: 40px;
       &__name {
