--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,13 +2,13 @@
   .side-bar__user-name
     .side-bar__user-name__top-items
       .side-bar__user-name__top-items__name
-        name
+        = current_user.name
       .side-bar__user-name__top-items__icons
         = link_to "#", class: "side-bar__user-name__top-items__icons__new-btn" do
           = icon('fa', 'edit')
           %span<>
-        = link_to "#", class: "side-bar__user-name__top-items__icons__edit-btn" do
-          = icon('fa', 'cog')
+        = link_to edit_user_path(current_user) do
+          = icon('fa', 'cog', class: "side-bar__user-name__top-items__icons__edit-btn")
           %span<>
 
   .side-bar__group-list
