--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -4,8 +4,8 @@
       .side-bar__user-name__top-items__name
         = current_user.name
       .side-bar__user-name__top-items__icons
-        = link_to "#", class: "side-bar__user-name__top-items__icons__new-btn" do
-          = icon('fa', 'edit')
+        = link_to new_group_path do
+          = icon('fa', 'edit', class: "side-bar__user-name__top-items__icons__new-btn")
           %span<>
         = link_to edit_user_path(current_user) do
           = icon('fa', 'cog', class: "side-bar__user-name__top-items__icons__edit-btn")
