groups display setting
サイドバーにグループ一覧を表示

indexアクションを追加

hamlに、curentユーザーが所属するgroupの
nameカラムの情報を取得するコードを記述

scssに、aタグにtext-decoration:none; と color: white; を設定し、リンクの装飾を削除

サイドバーにグループ一覧を表示しよう
https://master.tech-camp.in/curriculums/4048

ログイン中のユーザーが属しているグループをアソシエーションで取得し、一覧表示

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -12,8 +12,10 @@
           %span<>
 
   .side-bar__group-list
-    .side-bar__group-list__bottom-groups
-      .side-bar__group-list__bottom-groups__name
-        techcamp
-      .side-bar__group-list__bottom-groups__message
-        まだメッセージがありません
+    - current_user.groups.each do |group|
+      .side-bar__group-list__bottom-groups
+        = link_to '#' do
+          .side-bar__group-list__bottom-groups__name
+            = group.name
+          .side-bar__group-list__bottom-groups__message
+            まだメッセージがありません
