--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -45,6 +45,10 @@
     background-color: #2f3e51;
     padding: 20px 20px 0px;
     overflow: scroll;
+    a {
+      text-decoration:none;
+      color: white;
+    }
     &__bottom-groups {
       margin-bottom: 40px;
       &__name {
