--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -11,13 +11,7 @@
 
   .chat-main__messages
     .chat-main__messages__box
-      .chat-main__messages__box__up
-        .chat-main__messages__box__up__title
-          test
-        .chat-main__messages__box__up__time
-          2020/05/23
-      .chat-main__messages__box__message
-        Hello
+      = render @messages
 
   .form
     = form_for [@group, @message] do |f|
