Display last message
サイドバーのグループ部分に最新メッセージの表示を設定
https://master.tech-camp.in/curriculums/2687

モデルにshow_last_messageメソッドを定義

if (last_message = messages.last).present?
　最新のメッセージを変数last_messageに代入し、
　メッセージが投稿されているか判断

last_message.content?
　文章が投稿されている場合、画像が投稿されている場合で処理分け

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -18,4 +18,4 @@
           .side-bar__group-list__bottom-groups__name
             = group.name
           .side-bar__group-list__bottom-groups__message
-            まだメッセージがありません
+            = group.show_last_message
