Display group name, user name to header
ヘッダーにグループ名とユーザー名が表示されるようにする
https://master.tech-camp.in/curriculums/3948

Messagesコントローラー
before_actionでset_groupメソッドが実行され、
@groupにグループ情報が格納される。

ビュー
@groupがビューに渡されるため、ビューで@group.nameと記述するとそのグループの名称が取得できる。
アソシエーションを使っているので@group.usersという書き方で、そのグループに属している全てのユーザー情報を取得できる。
each文で1つずつ情報を取り出し、その取り出した結果である「変数user」に対して「.name」を使用する。

配列のような形で複数のユーザー情報を格納されているため、@group.users.nameといった書き方はできない。(どのユーザーの名前を取得しようとしているのか特定できないため)

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -3,8 +3,12 @@
     .chat-main__group-info__left
       .chat-main__group-info__left__name
         test
+        = @group.name
       .chat-main__group-info__left__member
-        Member：testさん
+        Member：
+        .chat-main__group-info__left__member-list
+          - @group.users.each do |user|
+            = user.name
     .chat-main__group-info__icon
       = link_to "#", class: "chat-main__group-info__icon__edit" do
         Edit
