Link to group edit display
グループ編集ページへのリンクを設置する
https://master.tech-camp.in/curriculums/1175

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -9,7 +9,7 @@
           - @group.users.each do |user|
             = user.name
     .chat-main__group-info__icon
-      = link_to "#", class: "chat-main__group-info__icon__edit" do
+      = link_to "edit", class: "chat-main__group-info__icon__edit" do
         Edit
 
   .chat-main__messages
