Add and display member
2.追加ボタンをクリックされたユーザーの名前を、チャットメンバーの部分に追加し、検索結果からは消す
https://master.tech-camp.in/curriculums/3708#16
https://master.tech-camp.in/curriculums/3708#16

　2. 「追加」ボタンがクリックされたユーザーが、チャットメンバーの方に追加される

--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -24,6 +24,8 @@
       -# = f.collection_check_boxes :user_ids, User.all, :id, :name
       / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
       #chat-group-users.js-add-user
+        .chat-group-user.clearfix.js-chat-member
+
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
     .chat-group-form__field--right
