--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.chat-main__messages__box
+.chat-main__messages__box{data: {message: {id: message.id}}}
   .chat-main__messages__box__up
     .chat-main__messages__box__up__title
       = message.user.name
